# Glad2-CMake

./: CMakeLists.txt  LICENSE  README.md
cmake/: Glad2CMakeConfig.cmake.in  glad2cmakeConfig.cmake.in
